--- a/public/index.html
+++ b/public/index.html
@@ -181,7 +181,7 @@
             </div>
             <div class="modal-body">
                 <div class="system-form-container">
-                    <div class="system-form" id="systemForm" style="display: none;">
+                    <div class="system-form" id="systemForm">
                         <h3 id="formTitle">Add System</h3>
                         <div class="form-group">
                             <label class="form-label">System Name</label>
@@ -196,15 +196,6 @@
                             <button class="btn btn-cancel" id="cancelFormBtn">Cancel</button>
                             <button class="btn btn-save" id="saveSystemBtn">Save</button>
                         </div>
-                    </div>
-                    <div class="system-form-toggle" id="addSystemBtnContainer">
-                        <button class="btn btn-save" id="addSystemBtn">+ Add System</button>
-                    </div>
-                </div>
-                <div class="systems-list-container">
-                    <h3 class="systems-list-title">Registered Systems</h3>
-                    <div class="systems-list" id="systemsList">
-                        <!-- Systems will be listed here -->
                     </div>
                 </div>
             </div>
