feat: implement auto-save for all field changes
- Removed Save Settings and Cancel buttons
- Implemented auto-save with 1 second debounce after field changes
- Auto-save works for both structured and raw mode editing
- Added visual indicator showing 'Saving...' and 'Saved' status
- All field changes are automatically saved without manual action
- Improved UX: seamless editing experience with automatic persistence
- Removed updateSaveButton() function and all related calls

--- a/public/index.html
+++ b/public/index.html
@@ -59,9 +59,8 @@
                     <!-- Content will be generated dynamically -->
                 </div>
                 
-                <div class="action-buttons">
-                    <button class="btn btn-cancel" id="cancelBtn">Cancel</button>
-                    <button class="btn btn-save" id="saveBtn">Save Settings</button>
+                <div class="action-buttons" id="actionButtons" style="display: none;">
+                    <!-- Auto-save indicator will be shown here -->
                 </div>
             </div>
         </div>
